--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.60</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>1.7</version>
@@ -382,13 +387,13 @@
 
   <profiles>
     <profile>
-      <id>java16</id>
+      <id>java18</id>
       <activation>
-        <jdk>1.6</jdk>
+        <jdk>1.8</jdk>
       </activation>
       <properties>
-        <maven.compiler.testTarget>1.6</maven.compiler.testTarget>
-        <maven.compiler.testSource>1.6</maven.compiler.testSource>
+        <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
+        <maven.compiler.testSource>1.8</maven.compiler.testSource>
         <maven.compiler.testCompilerArgument />
       </properties>
       <build>
@@ -421,9 +426,9 @@
       </build>
     </profile>
     <profile>
-      <id>java17</id>
+      <id>java18</id>
       <activation>
-        <jdk>1.7</jdk>
+        <jdk>1.8</jdk>
       </activation>
       <properties>
         <maven.compiler.testTarget>1.7</maven.compiler.testTarget>
